RESOLVED FIXED273379
[Site Isolation] Top content inset is incorrect after a cross-site navigation
https://bugs.webkit.org/show_bug.cgi?id=273379
Summary [Site Isolation] Top content inset is incorrect after a cross-site navigation
Charlie Wolfe
Reported 2024-04-28 17:19:27 PDT
When this was added, it was only sent to iframe processes. Now, it can also be sent to the main frame, causing content to be incorrectly offset.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-28 17:19:39 PDT
Charlie Wolfe
Comment 2 2024-04-28 17:20:29 PDT
EWS
Comment 3 2024-04-29 12:50:25 PDT
Committed 278119@main (40c054663111): <https://commits.webkit.org/278119@main> Reviewed commits have been landed. Closing PR #27851 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.