[Site Isolation] Top content inset is incorrect after a cross-site navigation https://bugs.webkit.org/show_bug.cgi?id=273379 rdar://127205664

Reviewed by Alex Christensen.

This was added a while ago in 259937@main, and I’m not sure why. It’s causing page content to be
offset after a cross-site navigation because the top content inset sent to the destination process is
always zero.

This issue became more frequent after 275592@main, because we started using these creation parameters
for main frame process swaps.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::creationParameters):
(WebKit::WebPageProxy::creationParametersForRemotePage):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm:
(TestWebKitAPI::TEST(SiteIsolation, TopContentInsetAfterCrossSiteNavigation)):

Canonical link: https://commits.webkit.org/278119@main